# ROS-MSCL

mscl_msgs/: CMakeLists.txt  package.xml
ros_mscl/: CMakeLists.txt  package.xml
ros_mscl/config/: microstrain.yaml
ros_mscl/include/ros_mscl/: microstrain_3dm.h  microstrain_diagnostic_updater.h
ros_mscl/launch/: microstrain.launch.py
ros_mscl/src/: microstrain_3dm.cpp  microstrain_3dm_node.cpp  microstrain_diagnostic_updater.cpp
